--- a/src/app/shared/components/contact-number-form/contact-number-form.component.scss
+++ b/src/app/shared/components/contact-number-form/contact-number-form.component.scss
@@ -13,7 +13,8 @@ ion-card {
     height: 80%;
     top: 10%;
   }
-  margin: 20px 0 10px;
+  margin: 16px 0 10px;
+  max-width: 330px !important;
 }
 
 .contact-input {
